@@ -1,3 +1,7 @@
+2008-06-20
+	* Can now supply program arguments on FLTK version command line:
+	sbasici -r t5.bas foo -or- sbasici t5.bas foo
+
 2008-06-06
 	* Implemented the ability to declare a local variable and assign a
 	  value to it on the same line, eg local foo = "foo"
